2005-10-02  Al Riddoch  <alriddoch@zepler.org>

	* Eris/BaseConnection.cpp: Update to use new Negotiate API
	  in Atlas-C++.

2005-10-01  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Entity.cpp: Remove an unnecessary static cast. Check the
	  velocity vector is valid before checking its magnitude.

2005-09-20  James Turner  <james@worldforge.org>

	* Eris.xcodeproj/project.pbproj: XCode 2.1 build system

2005-09-09  Simon Goodall  <simon@simongoodall.co.uk>

	* Eris/Enity.h: Change sigc::signal to SigC::Signal1 on Say object so it
	  compiles

2005-09-06  Al Riddoch  <alriddoch@zepler.org>

	* test/stubServer.cpp: Update factory method parameters to
	  match that expected by the Atlas-C++ object factory.

2005-09-04  Al Riddoch  <alriddoch@zepler.org>

	* Eris/TypeInfo.cpp: Update factory method parameters to
	  match that expected by the Atlas-C++ object factory.

2005-09-01  James Turner  <james@worldforge.org>

    * Eris/Account.h, Eris/Account.cpp, Eris/Avatar.cpp: make Account
      explicitly track Avatars, and make the mapping from character ID to
      avatar instance available. This allows for an 'isActive' query of
      a character.
      
    * Eris/Connection.cpp, Eris/BaseConnection.cpp: prefer eof() to fail() on 
      skstreams, in the hope of dealing with socket errors better.
      
    * test/commander.cpp, test/clientConnection.cpp

    * Eris/Entity.cpp: formatting changes
    
    * Eris/Entity.cpp: ignore setVisible(true) when the entity is in limbo;
      this fixes the spurious apperanced and disappearance of the character
      entity when activating.
    
    * test/viewTest.cpp, test/viewTest.h: factor some of the in-game tests
      into a seperate file.

2005-08-29  Al Riddoch  <alriddoch@zepler.org>

	* Eris/Account.cpp, Eris/Avatar.cpp, Eris/Lobby.cpp, Eris/Person.cpp,
	  Eris/Room.cpp, Eris/TypeService.cpp: Use Anonymous for op arguments
	  so they don't have parents unnecessarily.
